@@ -65,13 +65,8 @@ property(runtime) :-
 		 *	     ERRORS		*
 		 *******************************/
 
-:- multifile
-	prolog:message/3.
+:- consult('../lib/swi_compatibility').
 
-prolog:message(T) -->
-	{ '$c_current_predicate'(_, pce_messages:pce_message(_))
-	}, % avoid problem while booting
-	pce_messages:pce_message(T).
 
 		/********************************
 		*             ENTRY		*
